pythonscript/cffi_bindings/cdef.gen.h

/********************************************************/
/* AUTOGENERATED by tools/generate_gdnative_cffidefs.py */
/********************************************************/
typedef enum godot_error {GODOT_OK, GODOT_FAILED, GODOT_ERR_UNAVAILABLE, GODOT_ERR_UNCONFIGURED, GODOT_ERR_UNAUTHORIZED, GODOT_ERR_PARAMETER_RANGE_ERROR, GODOT_ERR_OUT_OF_MEMORY, GODOT_ERR_FILE_NOT_FOUND, GODOT_ERR_FILE_BAD_DRIVE, GODOT_ERR_FILE_BAD_PATH, GODOT_ERR_FILE_NO_PERMISSION, GODOT_ERR_FILE_ALREADY_IN_USE, GODOT_ERR_FILE_CANT_OPEN, GODOT_ERR_FILE_CANT_WRITE, GODOT_ERR_FILE_CANT_READ, GODOT_ERR_FILE_UNRECOGNIZED, GODOT_ERR_FILE_CORRUPT, GODOT_ERR_FILE_MISSING_DEPENDENCIES, GODOT_ERR_FILE_EOF, GODOT_ERR_CANT_OPEN, GODOT_ERR_CANT_CREATE, GODOT_ERR_QUERY_FAILED, GODOT_ERR_ALREADY_IN_USE, GODOT_ERR_LOCKED, GODOT_ERR_TIMEOUT, GODOT_ERR_CANT_CONNECT, GODOT_ERR_CANT_RESOLVE, GODOT_ERR_CONNECTION_ERROR, GODOT_ERR_CANT_AQUIRE_RESOURCE, GODOT_ERR_CANT_FORK, GODOT_ERR_INVALID_DATA, GODOT_ERR_INVALID_PARAMETER, GODOT_ERR_ALREADY_EXISTS, GODOT_ERR_DOES_NOT_EXIST, GODOT_ERR_DATABASE_CANT_READ, GODOT_ERR_DATABASE_CANT_WRITE, GODOT_ERR_COMPILATION_FAILED, GODOT_ERR_METHOD_NOT_FOUND, GODOT_ERR_LINK_FAILED, GODOT_ERR_SCRIPT_FAILED, GODOT_ERR_CYCLIC_LINK, GODOT_ERR_INVALID_DECLARATION, GODOT_ERR_DUPLICATE_SYMBOL, GODOT_ERR_PARSE_ERROR, GODOT_ERR_BUSY, GODOT_ERR_SKIP, GODOT_ERR_HELP, GODOT_ERR_BUG, GODOT_ERR_PRINTER_ON_FIRE, GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD, GODOT_ERR_WTF = GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD} godot_error;
typedef bool godot_bool;
typedef int godot_int;
typedef float godot_real;
typedef void godot_object;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
typedef struct godot_vector2
{
  uint8_t _dont_touch_that[8];
} godot_vector2;
godot_vector2 godot_vector2_new(const godot_real p_x, const godot_real p_y);
void godot_vector2_set_x(godot_vector2 *p_v, const godot_real p_x);
void godot_vector2_set_y(godot_vector2 *p_v, const godot_real p_y);
godot_real godot_vector2_get_x(const godot_vector2 *p_v);
godot_real godot_vector2_get_y(const godot_vector2 *p_v);
godot_vector2 godot_vector2_normalized(const godot_vector2 *p_v);
godot_real godot_vector2_length(const godot_vector2 *p_v);
godot_real godot_vector2_length_squared(const godot_vector2 *p_v);
godot_real godot_vector2_distance_to(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_real godot_vector2_distance_squared_to(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_vector2 godot_vector2_abs(const godot_vector2 *p_v);
godot_real godot_vector2_angle(const godot_vector2 *p_v);
godot_real godot_vector2_angle_to(const godot_vector2 *p_v, const godot_vector2 p_to);
godot_real godot_vector2_angle_to_point(const godot_vector2 *p_v, const godot_vector2 p_to);
godot_vector2 godot_vector2_clamped(const godot_vector2 *p_v, godot_real length);
godot_vector2 godot_vector2_cubic_interpolate(const godot_vector2 *p_v, const godot_vector2 p_b, const godot_vector2 p_pre_a, const godot_vector2 p_post_b, godot_real t);
godot_real godot_vector2_dot(const godot_vector2 *p_v, const godot_vector2 p_with);
godot_vector2 godot_vector2_floor(const godot_vector2 *p_v);
godot_real godot_vector2_aspect(const godot_vector2 *p_v);
godot_vector2 godot_vector2_linear_interpolate(const godot_vector2 *p_v, const godot_vector2 p_b, godot_real t);
godot_vector2 godot_vector2_reflect(const godot_vector2 *p_v, const godot_vector2 p_vec);
godot_vector2 godot_vector2_rotated(const godot_vector2 *p_v, godot_real phi);
godot_vector2 godot_vector2_slide(const godot_vector2 *p_v, godot_vector2 p_vec);
godot_vector2 godot_vector2_snapped(const godot_vector2 *p_v, godot_vector2 p_by);
godot_vector2 godot_vector2_tangent(const godot_vector2 *p_v);
godot_vector2 godot_vector2_operator_add(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_vector2 godot_vector2_operator_subtract(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_vector2 godot_vector2_operator_multiply_vector(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_vector2 godot_vector2_operator_multiply_scalar(const godot_vector2 *p_v, const godot_real p_b);
godot_vector2 godot_vector2_operator_divide_vector(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_vector2 godot_vector2_operator_divide_scalar(const godot_vector2 *p_v, const godot_real p_b);
godot_bool godot_vector2_operator_equal(const godot_vector2 *p_v, const godot_vector2 p_b);
godot_bool godot_vector2_operator_less(const godot_vector2 *p_v, const godot_vector2 p_b);
typedef struct godot_vector3
{
  uint8_t _dont_touch_that[12];
} godot_vector3;
typedef struct godot_basis
{
  uint8_t _dont_touch_that[36];
} godot_basis;
typedef struct godot_quat
{
  uint8_t _dont_touch_that[16];
} godot_quat;
void godot_quat_new(godot_quat *p_quat);
void godot_basis_new_with_rows(godot_basis *p_v, const godot_vector3 p_row0, const godot_vector3 p_row1, const godot_vector3 p_row2);
typedef struct godot_color
{
  uint8_t _dont_touch_that[16];
} godot_color;
void godot_color_new_rgba(godot_color *p_color, const godot_real r, const godot_real g, const godot_real b, const godot_real a);
typedef struct godot_pool_byte_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_byte_array;
typedef struct godot_pool_int_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_int_array;
typedef struct godot_pool_real_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_real_array;
typedef struct godot_pool_string_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_string_array;
typedef struct godot_pool_vector2_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector2_array;
typedef struct godot_pool_vector3_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector3_array;
typedef struct godot_pool_color_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_color_array;
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;