pythonscript/gdnative.pxd

# cython: language_level=3

from libc.stdint cimport uint8_t, uint64_t, int64_t, uint32_t


cdef extern from "godot_headers/gdnative/gdnative.h":

    ctypedef enum godot_error:
        GODOT_OK
        GODOT_FAILED
        GODOT_ERR_UNAVAILABLE
        GODOT_ERR_UNCONFIGURED
        GODOT_ERR_UNAUTHORIZED
        GODOT_ERR_PARAMETER_RANGE_ERROR
        GODOT_ERR_OUT_OF_MEMORY
        GODOT_ERR_FILE_NOT_FOUND
        GODOT_ERR_FILE_BAD_DRIVE
        GODOT_ERR_FILE_BAD_PATH
        GODOT_ERR_FILE_NO_PERMISSION
        GODOT_ERR_FILE_ALREADY_IN_USE
        GODOT_ERR_FILE_CANT_OPEN
        GODOT_ERR_FILE_CANT_WRITE
        GODOT_ERR_FILE_CANT_READ
        GODOT_ERR_FILE_UNRECOGNIZED
        GODOT_ERR_FILE_CORRUPT
        GODOT_ERR_FILE_MISSING_DEPENDENCIES
        GODOT_ERR_FILE_EOF
        GODOT_ERR_CANT_OPEN
        GODOT_ERR_CANT_CREATE
        GODOT_ERR_QUERY_FAILED
        GODOT_ERR_ALREADY_IN_USE
        GODOT_ERR_LOCKED
        GODOT_ERR_TIMEOUT
        GODOT_ERR_CANT_CONNECT
        GODOT_ERR_CANT_RESOLVE
        GODOT_ERR_CONNECTION_ERROR
        GODOT_ERR_CANT_ACQUIRE_RESOURCE
        GODOT_ERR_CANT_FORK
        GODOT_ERR_INVALID_DATA
        GODOT_ERR_INVALID_PARAMETER
        GODOT_ERR_ALREADY_EXISTS
        GODOT_ERR_DOES_NOT_EXIST
        GODOT_ERR_DATABASE_CANT_READ
        GODOT_ERR_DATABASE_CANT_WRITE
        GODOT_ERR_COMPILATION_FAILED
        GODOT_ERR_METHOD_NOT_FOUND
        GODOT_ERR_LINK_FAILED
        GODOT_ERR_SCRIPT_FAILED
        GODOT_ERR_CYCLIC_LINK
        GODOT_ERR_INVALID_DECLARATION
        GODOT_ERR_DUPLICATE_SYMBOL
        GODOT_ERR_PARSE_ERROR
        GODOT_ERR_BUSY
        GODOT_ERR_SKIP
        GODOT_ERR_HELP
        GODOT_ERR_BUG
        GODOT_ERR_PRINTER_ON_FIRE

    ctypedef bool godot_bool

    ctypedef int godot_int

    ctypedef float godot_real

    ctypedef void godot_object

    ctypedef wchar_t godot_char_type

    ctypedef struct godot_string:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_char_string:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_array_read_access:
        uint8_t _dont_touch_that[1]

    ctypedef godot_pool_array_read_access godot_pool_byte_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_int_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_real_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_string_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_vector2_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_vector3_array_read_access

    ctypedef godot_pool_array_read_access godot_pool_color_array_read_access

    ctypedef struct godot_pool_array_write_access:
        uint8_t _dont_touch_that[1]

    ctypedef godot_pool_array_write_access godot_pool_byte_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_int_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_real_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_string_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_vector2_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_vector3_array_write_access

    ctypedef godot_pool_array_write_access godot_pool_color_array_write_access

    ctypedef struct godot_pool_byte_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_int_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_real_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_string_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_vector2_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_vector3_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_pool_color_array:
        uint8_t _dont_touch_that[sizeof(void *)]

    ctypedef struct godot_color:
        uint8_t _dont_touch_that[16]

    void godot_color_new_rgba(godot_color* r_dest, godot_real p_r, godot_real p_g, godot_real p_b, godot_real p_a)

    void godot_color_new_rgb(godot_color* r_dest, godot_real p_r, godot_real p_g, godot_real p_b)

    godot_real godot_color_get_r(godot_color* p_self)

    void godot_color_set_r(godot_color* p_self, godot_real r)

    godot_real godot_color_get_g(godot_color* p_self)

    void godot_color_set_g(godot_color* p_self, godot_real g)

    godot_real godot_color_get_b(godot_color* p_self)

    void godot_color_set_b(godot_color* p_self, godot_real b)

    godot_real godot_color_get_a(godot_color* p_self)

    void godot_color_set_a(godot_color* p_self, godot_real a)

    godot_real godot_color_get_h(godot_color* p_self)

    godot_real godot_color_get_s(godot_color* p_self)

    godot_real godot_color_get_v(godot_color* p_self)

    godot_string godot_color_as_string(godot_color* p_self)

    godot_int godot_color_to_rgba32(godot_color* p_self)

    godot_int godot_color_to_abgr32(godot_color* p_self)

    godot_int godot_color_to_abgr64(godot_color* p_self)

    godot_int godot_color_to_argb64(godot_color* p_self)

    godot_int godot_color_to_rgba64(godot_color* p_self)

    godot_int godot_color_to_argb32(godot_color* p_self)

    godot_real godot_color_gray(godot_color* p_self)

    godot_color godot_color_inverted(godot_color* p_self)

    godot_color godot_color_contrasted(godot_color* p_self)

    godot_color godot_color_linear_interpolate(godot_color* p_self, godot_color* p_b, godot_real p_t)

    godot_color godot_color_blend(godot_color* p_self, godot_color* p_over)

    godot_color godot_color_darkened(godot_color* p_self, godot_real p_amount)

    godot_color godot_color_from_hsv(godot_color* p_self, godot_real p_h, godot_real p_s, godot_real p_v, godot_real p_a)

    godot_color godot_color_lightened(godot_color* p_self, godot_real p_amount)

    godot_string godot_color_to_html(godot_color* p_self, godot_bool p_with_alpha)

    godot_bool godot_color_operator_equal(godot_color* p_self, godot_color* p_b)

    godot_bool godot_color_operator_less(godot_color* p_self, godot_color* p_b)

    ctypedef struct godot_vector2:
        uint8_t _dont_touch_that[8]

    void godot_vector2_new(godot_vector2* r_dest, godot_real p_x, godot_real p_y)

    godot_string godot_vector2_as_string(godot_vector2* p_self)

    godot_vector2 godot_vector2_normalized(godot_vector2* p_self)

    godot_real godot_vector2_length(godot_vector2* p_self)

    godot_real godot_vector2_angle(godot_vector2* p_self)

    godot_real godot_vector2_length_squared(godot_vector2* p_self)

    godot_bool godot_vector2_is_normalized(godot_vector2* p_self)

    godot_real godot_vector2_distance_to(godot_vector2* p_self, godot_vector2* p_to)

    godot_real godot_vector2_distance_squared_to(godot_vector2* p_self, godot_vector2* p_to)

    godot_real godot_vector2_angle_to(godot_vector2* p_self, godot_vector2* p_to)

    godot_real godot_vector2_angle_to_point(godot_vector2* p_self, godot_vector2* p_to)

    godot_vector2 godot_vector2_linear_interpolate(godot_vector2* p_self, godot_vector2* p_b, godot_real p_t)

    godot_vector2 godot_vector2_cubic_interpolate(godot_vector2* p_self, godot_vector2* p_b, godot_vector2* p_pre_a, godot_vector2* p_post_b, godot_real p_t)

    godot_vector2 godot_vector2_rotated(godot_vector2* p_self, godot_real p_phi)

    godot_vector2 godot_vector2_tangent(godot_vector2* p_self)

    godot_vector2 godot_vector2_floor(godot_vector2* p_self)

    godot_vector2 godot_vector2_snapped(godot_vector2* p_self, godot_vector2* p_by)

    godot_real godot_vector2_aspect(godot_vector2* p_self)

    godot_real godot_vector2_dot(godot_vector2* p_self, godot_vector2* p_with)

    godot_vector2 godot_vector2_slide(godot_vector2* p_self, godot_vector2* p_n)

    godot_vector2 godot_vector2_bounce(godot_vector2* p_self, godot_vector2* p_n)

    godot_vector2 godot_vector2_reflect(godot_vector2* p_self, godot_vector2* p_n)

    godot_vector2 godot_vector2_abs(godot_vector2* p_self)

    godot_vector2 godot_vector2_clamped(godot_vector2* p_self, godot_real p_length)

    godot_vector2 godot_vector2_operator_add(godot_vector2* p_self, godot_vector2* p_b)

    godot_vector2 godot_vector2_operator_subtract(godot_vector2* p_self, godot_vector2* p_b)

    godot_vector2 godot_vector2_operator_multiply_vector(godot_vector2* p_self, godot_vector2* p_b)

    godot_vector2 godot_vector2_operator_multiply_scalar(godot_vector2* p_self, godot_real p_b)

    godot_vector2 godot_vector2_operator_divide_vector(godot_vector2* p_self, godot_vector2* p_b)

    godot_vector2 godot_vector2_operator_divide_scalar(godot_vector2* p_self, godot_real p_b)

    godot_bool godot_vector2_operator_equal(godot_vector2* p_self, godot_vector2* p_b)

    godot_bool godot_vector2_operator_less(godot_vector2* p_self, godot_vector2* p_b)

    godot_vector2 godot_vector2_operator_neg(godot_vector2* p_self)

    void godot_vector2_set_x(godot_vector2* p_self, godot_real p_x)

    void godot_vector2_set_y(godot_vector2* p_self, godot_real p_y)

    godot_real godot_vector2_get_x(godot_vector2* p_self)

    godot_real godot_vector2_get_y(godot_vector2* p_self)

    ctypedef struct godot_vector3:
        uint8_t _dont_touch_that[12]

    ctypedef struct godot_basis:
        uint8_t _dont_touch_that[36]

    ctypedef struct godot_quat:
        uint8_t _dont_touch_that[16]

    void godot_quat_new(godot_quat* r_dest, godot_real p_x, godot_real p_y, godot_real p_z, godot_real p_w)

    void godot_quat_new_with_axis_angle(godot_quat* r_dest, godot_vector3* p_axis, godot_real p_angle)

    void godot_quat_new_with_basis(godot_quat* r_dest, godot_basis* p_basis)

    void godot_quat_new_with_euler(godot_quat* r_dest, godot_vector3* p_euler)

    godot_real godot_quat_get_x(godot_quat* p_self)

    void godot_quat_set_x(godot_quat* p_self, godot_real val)

    godot_real godot_quat_get_y(godot_quat* p_self)

    void godot_quat_set_y(godot_quat* p_self, godot_real val)

    godot_real godot_quat_get_z(godot_quat* p_self)

    void godot_quat_set_z(godot_quat* p_self, godot_real val)

    godot_real godot_quat_get_w(godot_quat* p_self)

    void godot_quat_set_w(godot_quat* p_self, godot_real val)

    godot_string godot_quat_as_string(godot_quat* p_self)

    godot_real godot_quat_length(godot_quat* p_self)

    godot_real godot_quat_length_squared(godot_quat* p_self)

    godot_quat godot_quat_normalized(godot_quat* p_self)

    godot_bool godot_quat_is_normalized(godot_quat* p_self)

    godot_quat godot_quat_inverse(godot_quat* p_self)

    godot_real godot_quat_dot(godot_quat* p_self, godot_quat* p_b)

    godot_vector3 godot_quat_xform(godot_quat* p_self, godot_vector3* p_v)

    godot_quat godot_quat_slerp(godot_quat* p_self, godot_quat* p_b, godot_real p_t)

    godot_quat godot_quat_slerpni(godot_quat* p_self, godot_quat* p_b, godot_real p_t)

    godot_quat godot_quat_cubic_slerp(godot_quat* p_self, godot_quat* p_b, godot_quat* p_pre_a, godot_quat* p_post_b, godot_real p_t)

    godot_quat godot_quat_operator_multiply(godot_quat* p_self, godot_real p_b)

    godot_quat godot_quat_operator_add(godot_quat* p_self, godot_quat* p_b)

    godot_quat godot_quat_operator_subtract(godot_quat* p_self, godot_quat* p_b)

    godot_quat godot_quat_operator_divide(godot_quat* p_self, godot_real p_b)

    godot_bool godot_quat_operator_equal(godot_quat* p_self, godot_quat* p_b)

    godot_quat godot_quat_operator_neg(godot_quat* p_self)

    void godot_quat_set_axis_angle(godot_quat* p_self, godot_vector3* p_axis, godot_real p_angle)

    void godot_basis_new_with_rows(godot_basis* r_dest, godot_vector3* p_x_axis, godot_vector3* p_y_axis, godot_vector3* p_z_axis)
